--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,15 @@ env:
     - COMPOSER_FLAGS="--prefer-lowest"
     - COMPOSER_FLAGS=""
 
+before_install:
+  - composer require satooshi/php-coveralls:dev-master
+  - composer install --dev
+
+after_script:
+      - php vendor/bin/coveralls -v
+
 before_script:
   - travis_retry composer update ${COMPOSER_FLAGS}
 
 script:
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --coverage-clover ./tests/logs/clover.xml
